--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,7 @@
 # 我们关心的数据
 INTERESTED_STAT: 'stat.mobKills'
 # 是否启用 ID 翻译。若是，还需提供 usernamecache.json
-INTERPRET_UUID_AS_PLAYER_ID: false
+INTERPRET_UUID_AS_PLAYER_ID: true
 # 直方图横轴细分区间的个数
 DIVISION: 20
 # 过滤掉大于这个数值的数据
